[TASK] vendor js added

--- a/index2.html
+++ b/index2.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="src/css/style.css"/>
+    <script src="src/vendor/jquery/jquery.min.js"></script>
+    <script src="src/vendor/underscore/underscore-min.js"></script>
+    <script src="src/vendor/backbone/backbone-min.js"></script>
 </head>
 <body>
-<img src="img/1.png" alt=""/>
-<script src="js/entry2.js"></script>
+<img src="src/img/1.png" alt="image1"/>
+<script src="src/js/entry.js"></script>
 </body>
 </html>
